--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,23 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "Fitzy-changes-backend/main.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "fitzy_frontend/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "Fitzy-changes-backend/main.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "Fitzy-changes-backend/main.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "Fitzy-changes-backend/main.py"
+        },
+        {
+            "src": "/(config.js|index.html|fitzy_frontend/.*)",
+            "dest": "/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
+        }
+    ]
 }
