--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "Fitzy-changes-backend/main.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "(index.html|fitzy_frontend/**)",
+            "use": "@vercel/static"
+        }
+    ],
     "rewrites": [
         {
             "source": "/api/(.*)",
