Include all static routes in vercel.json to fix 404

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,10 @@ uvicorn
 SQLAlchemy
 psycopg2-binary
 python-dotenv
-passlib
+passlib[argon2]
 argon2-cffi
 cloudinary
 python-multipart
 python-jose[cryptography]
-
-
-
+pydantic[email]
+email-validator
