--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
+            "src": "/backend/(.*)",
             "dest": "backend/main.py"
         },
         {
