fix: revert to root API and use selective routing in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
+            "src": "/(users|progress|exercise|category|veg|nonveg|exercise-log)(/.*)?",
             "dest": "backend/main.py"
         },
         {
