--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     ],
     "routes": [
         {
-            "src": "/(users|progress|exercise|category|veg|nonveg|exercise-log)(/.*)?",
+            "src": "/(users|exercise-progress|diet-progress|exercise|category|veg|nonveg|exercise-log)(/.*)?",
             "dest": "backend/main.py"
         },
         {
